added necessary inorganic chemicals as appropriate items and cable pipe cover

--- a/src/client/resources/assets/billtech/lang/en_us.json
+++ b/src/client/resources/assets/billtech/lang/en_us.json
@@ -1,52 +1,68 @@
-{
-    "block.billtech.tank_block": "Tank Block",
-    "block.billtech.tank_controller": "Tank Controller",
-    "block.billtech.gas_pipe": "Gas Pipe",
-    "block.billtech.methane_collector": "Methane Collector",
-    "block.billtech.methane_tank": "Methane Tank",
-    "block.billtech.methane_generator": "Methane Generator",
-    "container.billtech.tank_controller": "Tank Controller",
-    "container.billtech.basic_combustion_generator": "Basic Combustion Generator",
-    "container.billtech.electric_furnace": "Electric Furnace",
-    "container.billtech.coal_pyrolyzer": "Coal Pyrolyzer",
-    "container.billtech.oil_extractor": "Oil Extractor",
-    "container.billtech.distiller": "Distiller",
-    "container.billtech.paper_press": "Paper Press",
+﻿{
+  "block.billtech.tank_block": "Tank Block",
+  "block.billtech.tank_controller": "Tank Controller",
+  "block.billtech.gas_pipe": "Gas Pipe",
+  "block.billtech.methane_collector": "Methane Collector",
+  "block.billtech.methane_tank": "Methane Tank",
+  "block.billtech.methane_generator": "Methane Generator",
+  "block.billtech.pump": "Pump",
+  "block.billtech.valve": "Valve",
+  "block.billtech.check_valve": "Check Valve",
+  "block.billtech.flow_meter": "Flow Meter",
+  "block.billtech.regulator": "Regulator",
+  "block.billtech.insulated_copper_cable": "Insulated Copper Cable",
+  "block.billtech.cloth_insulated_copper_cable": "Cloth Insulated Copper Cable",
+  "block.billtech.basic_combustion_generator": "Basic Combustion Generator",
+  "block.billtech.electric_furnace": "Electric Furnace",
+  "block.billtech.coal_pyrolyzer": "Coal Pyrolyzer",
+  "block.billtech.oil_extractor": "Oil Extractor",
+  "block.billtech.distiller": "Distiller",
+  "block.billtech.paper_press": "Paper Press",
+  "block.billtech.grinder": "Grinder",
+  "block.billtech.separator": "Separator",
+
+  "container.billtech.tank_controller": "Tank Controller",
+  "container.billtech.basic_combustion_generator": "Basic Combustion Generator",
+  "container.billtech.electric_furnace": "Electric Furnace",
+  "container.billtech.coal_pyrolyzer": "Coal Pyrolyzer",
+  "container.billtech.oil_extractor": "Oil Extractor",
+  "container.billtech.distiller": "Distiller",
+  "container.billtech.paper_press": "Paper Press",
+  "container.billtech.separator": "Grinder/Separator",
   "container.billtech.methane_collector": "Methane Collector",
   "container.billtech.methane_generator": "Methane Generator",
   "container.billtech.methane_tank": "Methane Tank",
-    "block.billtech.pump": "Pump",
-    "block.billtech.valve": "Valve",
-    "block.billtech.check_valve": "Check Valve",
-    "block.billtech.flow_meter": "Flow Meter",
-    "block.billtech.regulator": "Regulator",
-    "block.billtech.insulated_copper_cable": "Insulated Copper Cable",
-    "block.billtech.cloth_insulated_copper_cable": "Cloth Insulated Copper Cable",
-    "block.billtech.basic_combustion_generator": "Basic Combustion Generator",
-    "block.billtech.electric_furnace": "Electric Furnace",
-    "block.billtech.coal_pyrolyzer": "Coal Pyrolyzer",
-    "block.billtech.oil_extractor": "Oil Extractor",
-    "block.billtech.distiller": "Distiller",
-    "block.billtech.paper_press": "Paper Press",
-    "item.billtech.speed_upgrade": "Speed Upgrade",
-    "item.billtech.power_upgrade": "Power Upgrade",
-    "item.billtech.energy_upgrade": "Energy Upgrade",
-    "item.billtech.storage_upgrade": "Storage Upgrade",
-    "item.billtech.plastic_sheet": "Plastic Sheet",
-    "item.billtech.upgrade_base": "Upgrade Base",
-    "item.billtech.steel_ingot": "Steel Ingot",
-    "item.billtech.billtech_bucket": "BillTech Bucket",
-    "item.billtech.sludge_bucket": "Sludge Bucket",
-    "item.billtech.coal_oil_bucket": "Coal Oil Bucket",
-    "item.billtech.crude_oil_bucket": "Crude Oil Bucket",
-    "item.billtech.light_fuel_bucket": "Light Fuel Bucket",
-    "item.billtech.heavy_fuel_bucket": "Heavy Fuel Bucket",
-    "item.billtech.methane_bucket": "Methane Bucket",
-    "container.billtech.upgrades": "Upgrades",
-    "container.billtech.regulator": "Regulator",
-    "advancement.billtech.root.title": "BillTech",
-    "advancement.billtech.root.description": "Industrial chemistry begins here.",
-    "advancement.billtech.tier1_complete.title": "Tier 1 Complete",
-    "advancement.billtech.tier1_complete.description": "Build every Tier 1 machine.",
-    "itemGroup.billtech": "BillTech"
+  "container.billtech.upgrades": "Upgrades",
+  "container.billtech.regulator": "Regulator",
+
+  "item.billtech.speed_upgrade": "Speed Upgrade",
+  "item.billtech.power_upgrade": "Power Upgrade",
+  "item.billtech.energy_upgrade": "Energy Upgrade",
+  "item.billtech.storage_upgrade": "Storage Upgrade",
+  "item.billtech.plastic_sheet": "Plastic Sheet",
+  "item.billtech.upgrade_base": "Upgrade Base",
+  "item.billtech.steel_ingot": "Steel Ingot",
+  "item.billtech.silica_powder": "Silica Powder",
+  "item.billtech.lime_powder": "Lime Powder",
+  "item.billtech.alumina_powder": "Alumina Powder",
+  "item.billtech.iron_oxide_powder": "Iron Oxide Powder",
+  "item.billtech.sodium_salt": "Sodium Salt",
+  "item.billtech.sulfur_powder": "Sulfur Powder",
+  "item.billtech.slag": "Slag",
+  "item.billtech.billtech_bucket": "BillTech Bucket",
+  "item.billtech.sludge_bucket": "Sludge Bucket",
+  "item.billtech.coal_oil_bucket": "Coal Oil Bucket",
+  "item.billtech.crude_oil_bucket": "Crude Oil Bucket",
+  "item.billtech.light_fuel_bucket": "Light Fuel Bucket",
+  "item.billtech.heavy_fuel_bucket": "Heavy Fuel Bucket",
+  "item.billtech.methane_bucket": "Methane Bucket",
+
+  "advancement.billtech.root.title": "BillTech",
+  "advancement.billtech.root.description": "Industrial chemistry begins here.",
+  "advancement.billtech.tier1_complete.title": "Tier 1 Complete",
+  "advancement.billtech.tier1_complete.description": "Build every Tier 1 machine.",
+  "advancement.billtech.inorganic_chemistry.title": "Inorganic Chemistry",
+  "advancement.billtech.inorganic_chemistry.description": "Extract your first mineral powder.",
+
+  "itemGroup.billtech": "BillTech"
 }
