added crude oil cracking multi block tower and necessary systems

--- a/src/client/resources/assets/billtech/lang/en_us.json
+++ b/src/client/resources/assets/billtech/lang/en_us.json
@@ -10,23 +10,29 @@
   "block.billtech.check_valve": "Check Valve",
   "block.billtech.flow_meter": "Flow Meter",
   "block.billtech.regulator": "Regulator",
+  "block.billtech.cover_panel": "Cover Panel",
   "block.billtech.insulated_copper_cable": "Insulated Copper Cable",
   "block.billtech.cloth_insulated_copper_cable": "Cloth Insulated Copper Cable",
   "block.billtech.basic_combustion_generator": "Basic Combustion Generator",
   "block.billtech.electric_furnace": "Electric Furnace",
   "block.billtech.coal_pyrolyzer": "Coal Pyrolyzer",
   "block.billtech.oil_extractor": "Oil Extractor",
+  "block.billtech.reactor": "Reactor",
   "block.billtech.distiller": "Distiller",
   "block.billtech.paper_press": "Paper Press",
   "block.billtech.grinder": "Grinder",
   "block.billtech.separator": "Separator",
+  "block.billtech.cracking_tower_controller": "Cracking Tower Controller",
+  "block.billtech.cracking_tower": "Cracking Tower",
 
   "container.billtech.tank_controller": "Tank Controller",
   "container.billtech.basic_combustion_generator": "Basic Combustion Generator",
   "container.billtech.electric_furnace": "Electric Furnace",
   "container.billtech.coal_pyrolyzer": "Coal Pyrolyzer",
   "container.billtech.oil_extractor": "Oil Extractor",
+  "container.billtech.reactor": "Reactor",
   "container.billtech.distiller": "Distiller",
+  "container.billtech.cracking_tower": "Cracking Tower",
   "container.billtech.paper_press": "Paper Press",
   "container.billtech.separator": "Grinder/Separator",
   "container.billtech.methane_collector": "Methane Collector",
@@ -44,11 +50,23 @@
   "item.billtech.steel_ingot": "Steel Ingot",
   "item.billtech.silica_powder": "Silica Powder",
   "item.billtech.lime_powder": "Lime Powder",
+  "item.billtech.quicklime": "Quicklime",
   "item.billtech.alumina_powder": "Alumina Powder",
   "item.billtech.iron_oxide_powder": "Iron Oxide Powder",
   "item.billtech.sodium_salt": "Sodium Salt",
+  "item.billtech.soda_ash": "Soda Ash",
   "item.billtech.sulfur_powder": "Sulfur Powder",
   "item.billtech.slag": "Slag",
+  "item.billtech.phosphorus_powder": "Phosphorus Powder",
+  "item.billtech.sulfuric_acid_bucket": "Sulfuric Acid Bucket",
+  "item.billtech.hydrochloric_acid_bucket": "Hydrochloric Acid Bucket",
+  "item.billtech.phosphoric_acid_bucket": "Phosphoric Acid Bucket",
+  "item.billtech.sodium_hydroxide_bucket": "Sodium Hydroxide Bucket",
+  "item.billtech.limewater_bucket": "Limewater Bucket",
+  "item.billtech.light_fraction_bucket": "Light Fraction Bucket",
+  "item.billtech.medium_fraction_bucket": "Medium Fraction Bucket",
+  "item.billtech.heavy_fraction_bucket": "Heavy Fraction Bucket",
+  "item.billtech.residue_bucket": "Residue Bucket",
   "item.billtech.billtech_bucket": "BillTech Bucket",
   "item.billtech.sludge_bucket": "Sludge Bucket",
   "item.billtech.coal_oil_bucket": "Coal Oil Bucket",
@@ -56,6 +74,7 @@
   "item.billtech.light_fuel_bucket": "Light Fuel Bucket",
   "item.billtech.heavy_fuel_bucket": "Heavy Fuel Bucket",
   "item.billtech.methane_bucket": "Methane Bucket",
+  "item.billtech.pipe_cover": "Pipe Cover",
 
   "advancement.billtech.root.title": "BillTech",
   "advancement.billtech.root.description": "Industrial chemistry begins here.",
