--- a/src/client/resources/assets/billtech/lang/en_us.json
+++ b/src/client/resources/assets/billtech/lang/en_us.json
@@ -7,6 +7,8 @@
   "block.billtech.methane_tank": "Methane Tank",
   "block.billtech.methane_generator": "Methane Generator",
   "block.billtech.item_controller": "Item Controller",
+  "block.billtech.recipe_encoder": "Recipe Encoder",
+  "block.billtech.auto_crafter": "Auto Crafter",
   "block.billtech.pump": "Pump",
   "block.billtech.valve": "Valve",
   "block.billtech.check_valve": "Check Valve",
@@ -41,6 +43,8 @@
   "container.billtech.methane_generator": "Methane Generator",
   "container.billtech.methane_tank": "Methane Tank",
   "container.billtech.item_controller": "Item Controller",
+  "container.billtech.recipe_encoder": "Recipe Encoder",
+  "container.billtech.auto_crafter": "Auto Crafter",
   "container.billtech.upgrades": "Upgrades",
   "container.billtech.regulator": "Regulator",
 
@@ -49,6 +53,7 @@
   "item.billtech.energy_upgrade": "Energy Upgrade",
   "item.billtech.storage_upgrade": "Storage Upgrade",
   "item.billtech.plastic_sheet": "Plastic Sheet",
+  "item.billtech.recipe_card": "Recipe Card",
   "item.billtech.upgrade_base": "Upgrade Base",
   "item.billtech.steel_ingot": "Steel Ingot",
   "item.billtech.silica_powder": "Silica Powder",
