added mad scientists tech tree, mob controls

--- a/src/client/resources/assets/billtech/lang/en_us.json
+++ b/src/client/resources/assets/billtech/lang/en_us.json
@@ -9,6 +9,12 @@
   "block.billtech.steam_boiler": "Steam Boiler",
   "block.billtech.steam_engine": "Steam Engine",
   "block.billtech.steam_generator": "Steam Generator",
+  "block.billtech.essence_extractor": "Essence Extractor",
+  "block.billtech.tesla_coil": "Tesla Coil",
+  "block.billtech.control_conductor_pad": "Control Conductor Pad",
+  "block.billtech.sentry_controller": "Sentry Controller",
+  "block.billtech.sentry_container": "Sentry Container",
+  "block.billtech.sentry_cover": "Sentry Cover",
   "block.billtech.item_controller": "Item Controller",
   "block.billtech.recipe_encoder": "Recipe Encoder",
   "block.billtech.auto_crafter": "Auto Crafter",
@@ -49,6 +55,9 @@
   "container.billtech.steam_boiler": "Steam Boiler",
   "container.billtech.steam_engine": "Steam Engine",
   "container.billtech.steam_generator": "Steam Generator",
+  "container.billtech.essence_extractor": "Essence Extractor",
+  "container.billtech.tesla_coil": "Tesla Coil",
+  "container.billtech.control_conductor_pad": "Control Conductor Pad",
   "container.billtech.item_controller": "Item Controller",
   "container.billtech.recipe_encoder": "Recipe Encoder",
   "container.billtech.auto_crafter": "Auto Crafter",
@@ -60,6 +69,8 @@
   "item.billtech.power_upgrade": "Power Upgrade",
   "item.billtech.energy_upgrade": "Energy Upgrade",
   "item.billtech.storage_upgrade": "Storage Upgrade",
+  "item.billtech.multi_kill_upgrade": "Multi-Kill Upgrade",
+  "item.billtech.yield_upgrade": "Yield Upgrade",
   "item.billtech.plastic_sheet": "Plastic Sheet",
   "item.billtech.recipe_card": "Recipe Card",
   "item.billtech.stripe_applicator": "Stripe Applicator",
@@ -86,6 +97,7 @@
   "item.billtech.residue_bucket": "Residue Bucket",
   "item.billtech.billtech_bucket": "BillTech Bucket",
   "item.billtech.sludge_bucket": "Sludge Bucket",
+  "item.billtech.mob_essence_bucket": "Mob Essence Bucket",
   "item.billtech.coal_oil_bucket": "Coal Oil Bucket",
   "item.billtech.crude_oil_bucket": "Crude Oil Bucket",
   "item.billtech.light_fuel_bucket": "Light Fuel Bucket",
