added tier 3 power cables

--- a/src/client/resources/assets/billtech/lang/en_us.json
+++ b/src/client/resources/assets/billtech/lang/en_us.json
@@ -26,6 +26,7 @@
   "block.billtech.cover_panel": "Cover Panel",
   "block.billtech.insulated_copper_cable": "Insulated Copper Cable",
   "block.billtech.cloth_insulated_copper_cable": "Cloth Insulated Copper Cable",
+  "block.billtech.hv_shielded_cable": "HV Shielded Cable",
   "block.billtech.basic_combustion_generator": "Basic Combustion Generator",
   "block.billtech.electric_furnace": "Electric Furnace",
   "block.billtech.coal_pyrolyzer": "Coal Pyrolyzer",
